[gd_scene load_steps=7 format=2]

[ext_resource path="res://Sprites/background.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Difficulty.gd" type="Script" id=2]
[ext_resource path="res://Sprites/back.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Chivo-Bold.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 70
outline_size = 4
outline_color = Color( 0.294118, 0.0588235, 0.635294, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 70
outline_size = 4
outline_color = Color( 0.294118, 0.0588235, 0.635294, 1 )
font_data = ExtResource( 4 )

[node name="Difficulty" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 288, 512 )
texture = ExtResource( 1 )

[node name="Easy" type="Button" parent="."]
margin_left = 43.0
margin_top = 474.0
margin_right = 230.0
margin_bottom = 564.0
rect_pivot_offset = Vector2( -747, 49 )
focus_mode = 0
custom_fonts/font = SubResource( 1 )
enabled_focus_mode = 0
keep_pressed_outside = true
text = "Easy "
flat = true

[node name="Difficult" type="Button" parent="."]
margin_left = 258.0
margin_top = 474.0
margin_right = 535.0
margin_bottom = 564.0
rect_pivot_offset = Vector2( -747, 49 )
focus_mode = 0
custom_fonts/font = SubResource( 2 )
enabled_focus_mode = 0
keep_pressed_outside = true
text = "Difficult"
flat = true

[node name="GoBack" type="Button" parent="."]
margin_top = 11.0
margin_right = 62.0
margin_bottom = 67.0
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 3 )
flat = true

[connection signal="pressed" from="Easy" to="." method="_on_Easy_pressed"]
[connection signal="pressed" from="Difficult" to="." method="_on_Difficult_pressed"]
[connection signal="pressed" from="GoBack" to="." method="_on_GoBack_pressed"]
